Added further tests for predecessors of inherited fields